--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             font-size: 28px;
         }
 
-        .tips, .diseases, .calculator, .mental-health {
+        .tips, .diseases, .calculator, .mental-health, .healthy-recipes {
             background-color: #ffffff;
             padding: 20px;
             border-radius: 8px;
@@ -92,12 +92,21 @@
             list-style-type: disc;
             padding-left: 20px;
         }
+
+        .healthy-recipes ul {
+            list-style-type: none;
+            padding-left: 0;
+        }
+
+        .healthy-recipes li {
+            margin-bottom: 10px;
+        }
     </style>
 </head>
 <body>
 
 <header>
-    <h1>Saúde e Bem-Estar para Todos</h1>
+    <h1>Saúde e Bem-Estar: Viva Melhor Todos os Dias!</h1>
 </header>
 
 <nav>
@@ -105,6 +114,7 @@
     <a href="#tips">Dicas de Saúde</a>
     <a href="#diseases">Prevenção de Doenças</a>
     <a href="#mental-health">Saúde Mental</a>
+    <a href="#healthy-recipes">Receitas Saudáveis</a>
 </nav>
 
 <div class="content">
@@ -121,14 +131,14 @@
     </section>
 
     <section id="tips" class="section">
-        <h2>Dicas de Saúde</h2>
+        <h2>Dicas de Saúde para o Dia a Dia</h2>
         <div class="tips">
             <ul>
-                <li><strong>Beba água regularmente:</strong> A água ajuda na digestão, regulação da temperatura corporal, transporte de nutrientes e mantém a pele saudável.</li>
-                <li><strong>Coma alimentos frescos:</strong> Inclua frutas, legumes, verduras e grãos integrais na sua alimentação. Evite alimentos processados e excessivamente gordurosos.</li>
-                <li><strong>Durma bem:</strong> O sono é essencial para recuperação física e mental. Tente dormir entre 7 e 9 horas por noite para um descanso adequado.</li>
-                <li><strong>Pratique atividades físicas:</strong> Faça pelo menos 30 minutos de atividades físicas por dia. Caminhada, corrida, yoga, ou dança são ótimas opções.</li>
-                <li><strong>Reduza o estresse:</strong> Encontre maneiras de relaxar e descontrair. A meditação, a leitura e o lazer são ótimos aliados.</li>
+                <li><strong>Coma alimentos ricos em fibras:</strong> Alimentos como grãos integrais, frutas e vegetais ajudam na digestão e mantêm seu sistema imunológico forte.</li>
+                <li><strong>Fique em movimento:</strong> Não fique parado por muito tempo. Levante-se, alongue-se e pratique atividade física regularmente.</li>
+                <li><strong>Evite alimentos ricos em gorduras saturadas:</strong> Reduza o consumo de frituras, alimentos industrializados e fast food.</li>
+                <li><strong>Preste atenção ao seu peso:</strong> Manter um peso saudável reduz o risco de doenças como diabetes tipo 2 e problemas cardíacos.</li>
+                <li><strong>Não esqueça do sol:</strong> Exponha-se ao sol de forma segura, por cerca de 10-15 minutos por dia, para garantir níveis adequados de vitamina D.</li>
             </ul>
         </div>
     </section>
@@ -137,30 +147,43 @@
         <h2>Prevenção de Doenças Comuns</h2>
         <div class="diseases">
             <h3>1. Hipertensão (Pressão Alta)</h3>
-            <p>A hipertensão pode ser controlada com uma dieta balanceada, redução de sal, prática regular de exercícios e controle do estresse.</p>
+            <p>A hipertensão é muitas vezes chamada de "assassino silencioso". Mantenha a pressão arterial sob controle com a prática de atividades físicas regulares, dieta balanceada e evitando o consumo excessivo de sal.</p>
 
             <h3>2. Diabetes Tipo 2</h3>
-            <p>Manter o peso saudável e evitar alimentos ricos em açúcar é essencial. A prática regular de atividades físicas também ajuda no controle da glicose.</p>
+            <p>A diabetes tipo 2 é uma condição em que o corpo não consegue usar adequadamente a insulina. Prevenção envolve alimentação saudável, controle do peso e atividade física constante.</p>
 
-            <h3>3. Câncer</h3>
-            <p>A prevenção do câncer inclui evitar o tabagismo, consumo excessivo de álcool e exposição ao sol sem proteção. Dietas ricas em fibras também podem ajudar.</p>
+            <h3>3. Doenças Cardiovasculares</h3>
+            <p>Manter uma dieta saudável, praticar exercícios e evitar fumar são as melhores formas de prevenir doenças cardíacas. Controlar o colesterol e a pressão arterial também é essencial.</p>
 
             <h3>4. Doenças Respiratórias</h3>
-            <p>A prática de exercícios respiratórios e a manutenção de um ambiente saudável e limpo são fundamentais para a prevenção de doenças respiratórias.</p>
+            <p>Para prevenir doenças respiratórias, como a asma, evite poluentes, procure um ambiente com boa ventilação e realize exercícios respiratórios regularmente.</p>
         </div>
     </section>
 
     <section id="mental-health" class="section">
-        <h2>Saúde Mental</h2>
+        <h2>Saúde Mental: A Importância do Equilíbrio Emocional</h2>
         <div class="mental-health">
-            <h3>Cuide da sua mente!</h3>
-            <p>A saúde mental é tão importante quanto a saúde física. Aqui estão algumas dicas para manter sua mente saudável:</p>
+            <h3>Dicas para Cuidar da Sua Mente:</h3>
             <ul>
-                <li><strong>Pratique atividades relaxantes:</strong> Meditação, yoga e caminhadas ao ar livre são ótimas para reduzir o estresse.</li>
-                <li><strong>Fale sobre seus sentimentos:</strong> Conversar com amigos ou procurar um terapeuta pode ajudar a aliviar o peso emocional.</li>
-                <li><strong>Reserve um tempo para si mesmo:</strong> Faça atividades que você goste e que ajudem a relaxar, como hobbies, leitura ou assistir a filmes.</li>
-                <li><strong>Exercite-se:</strong> O exercício físico não só melhora o corpo, mas também libera hormônios que ajudam a reduzir a ansiedade e a depressão.</li>
+                <li><strong>Pratique a meditação:</strong> A meditação é uma ótima maneira de reduzir o estresse e melhorar o foco mental.</li>
+                <li><strong>Durma o suficiente:</strong> Dormir entre 7 a 8 horas por noite é fundamental para manter a saúde mental em equilíbrio.</li>
+                <li><strong>Converse com alguém:</strong> Falar com amigos, familiares ou até um terapeuta pode ajudar a aliviar o peso emocional.</li>
+                <li><strong>Evite o isolamento:</strong> Interaja com outras pessoas, mantenha relações sociais e participe de atividades comunitárias.</li>
             </ul>
+        </div>
+    </section>
+
+    <section id="healthy-recipes" class="section">
+        <h2>Receitas Saudáveis para o Seu Bem-Estar</h2>
+        <div class="healthy-recipes">
+            <h3>Receita 1: Salada Colorida de Quinoa</h3>
+            <p>Uma refeição nutritiva e cheia de fibras! Prepare a quinoa e misture com tomate, pepino, cenoura, pimentão e ervas frescas. Tempere com azeite e limão. Uma excelente opção para o almoço.</p>
+
+            <h3>Receita 2: Smoothie Verde Energético</h3>
+            <p>Uma bebida refrescante e cheia de nutrientes. Bata espinafre, abacaxi, maçã, gengibre e um pouco de água de coco para um smoothie delicioso e saudável.</p>
+
+            <h3>Receita 3: Frango Grelhado com Legumes</h3>
+            <p>Um prato saudável e fácil de fazer. Grelhe peito de frango e acompanhe com legumes assados (cenoura, abobrinha, brócolis). A combinação ideal para uma alimentação equilibrada.</p>
         </div>
     </section>
 
